--- a/JAVA/core/src/main/resources/并发编程/3.0-Java同步与锁/自旋锁.md
+++ b/JAVA/core/src/main/resources/并发编程/3.0-Java同步与锁/自旋锁.md
@@ -77,8 +77,14 @@ atomicInteger.incrementAndGet(); //执行自增1
 
 ## 可重入锁 VS 非可重入锁
 
-可重入锁又名递归锁，是指在同一个线程在外层方法获取锁的时候，再进入该线程的内层方法会自动获取锁（前提锁对象得是同一个对象或者class），不会因为之前已经获取过还没释放而阻塞。Java中ReentrantLock和synchronized都是可重入锁，可重入锁的一个优点是可一定程度避免死锁。下面用示例代码来进行分析：
+>可重入锁指在同一个线程在外层方法获取锁的时候，再进入该线程的内层方法会自动获取锁（前提锁对象得是同一个对象或者class），不会因为之前已经获取过还没释放而阻塞。Java中ReentrantLock和synchronized都是可重入锁，可重入锁的一个优点是可一定程度避免死锁。
 
+```java
+// 类中的两个方法都是被内置锁synchronized修饰的，doSomething()方法中调用doOthers()方法。
+// 因为内置锁是可重入的，所以同一个线程在调用doOthers()时可以直接获得当前对象的锁，进入doOthers()进行操作。
+
+// 如果是一个不可重入锁，那么当前线程在调用doOthers()之前需要将执行doSomething()时获取当前对象的锁释放掉，
+// 实际上该对象锁已被当前线程所持有，且无法释放。所以此时会出现死锁。
 public class Widget {
     public synchronized void doSomething() {
         System.out.println("方法1执行...");
@@ -89,37 +95,42 @@ public class Widget {
         System.out.println("方法2执行...");
     }
 }
-在上面的代码中，类中的两个方法都是被内置锁synchronized修饰的，doSomething()方法中调用doOthers()方法。因为内置锁是可重入的，所以同一个线程在调用doOthers()时可以直接获得当前对象的锁，进入doOthers()进行操作。
+```
 
-如果是一个不可重入锁，那么当前线程在调用doOthers()之前需要将执行doSomething()时获取当前对象的锁释放掉，实际上该对象锁已被当前线程所持有，且无法释放。所以此时会出现死锁。
+>通过重入锁ReentrantLock以及非可重入锁NonReentrantLock的来对比分析一下为什么非可重入锁在重复调用同步资源时会出现死锁,
+见org.java.core.base.concurrent.chapter5.MyReentrantLock的nonfairTryAcquire方法.
 
-而为什么可重入锁就可以在嵌套调用时可以自动获得锁呢？我们通过图示和源码来分别解析一下。
-
-还是打水的例子，有多个人在排队打水，此时管理员允许锁和同一个人的多个水桶绑定。这个人用多个水桶打水时，第一个水桶和锁绑定并打完水之后，第二个水桶也可以直接和锁绑定并开始打水，所有的水桶都打完水之后打水人才会将锁还给管理员。这个人的所有打水流程都能够成功执行，后续等待的人也能够打到水。这就是可重入锁。
-
-
-
-但如果是非可重入锁的话，此时管理员只允许锁和同一个人的一个水桶绑定。第一个水桶和锁绑定打完水之后并不会释放锁，导致第二个水桶不能和锁绑定也无法打水。当前线程出现死锁，整个等待队列中的所有线程都无法被唤醒。
-
-
-
-之前我们说过ReentrantLock和synchronized都是重入锁，那么我们通过重入锁ReentrantLock以及非可重入锁NonReentrantLock的源码来对比分析一下为什么非可重入锁在重复调用同步资源时会出现死锁。
-
-首先ReentrantLock和NonReentrantLock都继承父类AQS，其父类AQS中维护了一个同步状态status来计数重入次数，status初始值为0。
-
-当线程尝试获取锁时，可重入锁先尝试获取并更新status值，如果status == 0表示没有其他线程在执行同步代码，则把status置为1，当前线程开始执行。如果status != 0，则判断当前线程是否是获取到这个锁的线程，如果是的话执行status+1，且当前线程可以再次获取锁。而非可重入锁是直接去获取并尝试更新当前status的值，如果status != 0的话会导致其获取锁失败，当前线程阻塞。
-
-释放锁时，可重入锁同样先获取当前status的值，在当前线程是持有锁的线程的前提下。如果status-1 == 0，则表示当前线程所有重复获取锁的操作都已经执行完毕，然后该线程才会真正释放锁。而非可重入锁则是在确定当前线程是持有锁的线程之后，直接将status置为0，将锁释放。
+```java
+// 注意jdk是没有这个NonReentrantLock类的，我这里只是说明
+public class NonReentrantLock{
+    protected boolean tryAcquire(int acquires){
+        // 不可以重入锁是直接尝试获取锁，而不判断当前线程是否已经持有锁
+        if(this.compareAndSetState(0, 1)){
+            this.owner = Thread.currentThread();
+            return true;
+        }else{
+            return false;
+        }
+    }
+    
+    protected boolean tryRelease(int releases){
+        if(Thread.currentThread() != this.owner){
+            throw new IllegalMonitorStateException();
+        }else{
+            this.owner = null;
+            this.setState(0);// 直接将state置位0
+            return true;
+        }
+    }
+}
+```
 
 ## 6. 独享锁 VS 共享锁
-   独享锁和共享锁同样是一种概念。我们先介绍一下具体的概念，然后通过ReentrantLock和ReentrantReadWriteLock的源码来介绍独享锁和共享锁。
-   
-   独享锁也叫排他锁，是指该锁一次只能被一个线程所持有。如果线程T对数据A加上排它锁后，则其他线程不能再对A加任何类型的锁。获得排它锁的线程即能读数据又能修改数据。JDK中的synchronized和JUC中Lock的实现类就是互斥锁。
-   
-   共享锁是指该锁可被多个线程所持有。如果线程T对数据A加上共享锁后，则其他线程只能对A再加共享锁，不能加排它锁。获得共享锁的线程只能读数据，不能修改数据。
-   
-   独享锁与共享锁也是通过AQS来实现的，通过实现不同的方法，来实现独享或者共享。
-   
-   下图为ReentrantReadWriteLock的部分源码：
+
+>通过ReentrantLock和ReentrantReadWriteLock的源码来介绍独享锁和共享锁
+
+独享锁也叫排他锁，是指该锁一次只能被一个线程所持有。如果线程T对数据A加上排它锁后，则其他线程不能再对A加任何类型的锁。获得排它锁的线程即能读数据又能修改数据。JDK中的synchronized就是独享锁。
+
+共享锁是指该锁可被多个线程所持有。如果线程T对数据A加上共享锁后，则其他线程只能对A再加共享锁，不能加排它锁。获得共享锁的线程只能读数据，不能修改数据。
 
 >参考:[java锁事!!](https://tech.meituan.com/2018/11/15/java-lock.html)
