--- a/Database/SQL/事务.md
+++ b/Database/SQL/事务.md
@@ -66,3 +66,98 @@ Serializable        -               -                           -
 
 查看当前数据库事务的隔离级别(ISOLATION LEVEL):`SELECT @@TX_ISOLATION;` or `SHOW VARIABLES LIKE 'tx_isolation';`
 
+**脏读(Dirty Read)**
+
+Read Uncommitted是隔离级别最低的一种事务级别,在这种隔离级别下，一个事务会读到另一个事务更新但是未提交数据，如果另一个事务回滚，那么当前事务读到的数据就是脏数据，这就是脏读.
+
+```sql
+-- 分别开启两个MySQL客户端连接，按顺序依次执行事务A和事务B
+
+-- 事务A
+SET TRANSACTION ISOLATION LEVEL READ UNCOMMITTED;
+BEGIN;
+
+-- 事务B
+SET TRANSACTION ISOLATION LEVEL READ UNCOMMITTED;
+BEGIN;
+
+-- 事务A
+UPDATE students SET name = 'Bob' WHERE id = 1;
+
+-- 事务B
+SELECT * FROM students WHERE id = 1;
+
+-- 事务A
+ROLLBACK;
+
+-- 事务B
+SELECT * FROM students WHERE id = 1;
+COMMIT;
+```
+
+当事务A执行更新操作后，但并未提交，而事务B读取到了事务A更新操作后的数据就是未提交的数据。随后，事务A进行了回滚，事务B再次读取id=1的记录，发现和上一次读取到的数据不一致，这就是脏读。可见，在Read Uncommitted隔离级别下，一个事务可能读取到另一个事务更新但未提交的数据，这个数据有可能是脏数据。
+
+**不可重复读(Non Repeatable Read)**
+
+在Read Committed隔离级别下，一个事务可能会遇到不可重复读（Non Repeatable Read）的问题。不可重复读是指，在一个事务内，多次读同一数据，在这个事务还没有结束时，如果另一个事务恰好修改了这个数据，那么，在第一个事务中，两次读取的数据就可能不一致。
+
+```sql
+-- 然后，分别开启两个MySQL客户端连接，按顺序依次执行事务A和事务B：
+
+-- 事务A
+SET TRANSACTION ISOLATION LEVEL READ COMMITTED;
+BEGIN;
+
+-- 事务B
+SET TRANSACTION ISOLATION LEVEL READ COMMITED;
+BEGIN;
+SELECT * FROM students WHERE id = 1;
+
+-- 事务A
+UPDATE students SET name = 'Bob' WHERE id = 1;
+COMMIT;
+
+-- 事务B
+SELECT * FROM students WHERE id = 1;
+COMMIT;
+```
+
+当事务B第一次执行查询时，得到的结果是Alice，随后，由于事务A更新了这条记录并提交，所以，事务B在第6步再次执行同样的查询时，得到的结果就变成了Bob，因此，在Read Committed隔离级别下，事务不可重复读同一条记录，因为很可能读到的结果不一致。
+
+**幻读(Phantom Read)**
+
+>在Repeatable Read隔离级别下，一个事务可能会遇到幻读（Phantom Read）的问题。
+幻读是指，在一个事务中，第一次查询某条记录，发现没有，但是，当试图更新这条不存在的记录时，竟然能成功，并且，再次读取同一条记录，它就神奇地出现了。
+
+```sql
+-- 然后，分别开启两个MySQL客户端连接，按顺序依次执行事务A和事务B：
+
+-- 事务A
+SET TRANSACTION ISOLATION LEVEL REPEATABLE READ;
+BEGIN;
+
+-- 事务B
+SET TRANSACTION ISOLATION LEVEL REPEATABLE READ;
+BEGIN;
+SELECT * FROM students WHERE id = 99;
+
+-- 事务A
+INSERT INTO students (id, name, class_id, gender, score) VALUES(99, 'xxx', 3, 'F', 90);
+COMMIT;
+
+-- 事务B
+SELECT * FROM students WHERE id = 99;
+UPDATE students SET name = 'Alice' WHERE id = 99;
+SELECT * FROM students WHERE id = 99;
+COMMIT;
+```
+
+事务B第一次读取id=99的记录时，读到的记录为空，说明不存在id=99的记录。随后，事务A插入了一条id=99的记录并提交。事务B再次读取id=99的记录时，读到的记录仍然为空，但是，事务B在第7步试图更新这条不存在的记录时，竟然成功了，并且，事务B在第8步再次读取id=99的记录时，记录出现了。
+
+>可见，幻读就是没有读到的记录，以为不存在，但其实是可以更新成功的，并且，更新成功后，再次读取，就出现了。
+
+**Serializable**
+
+>Serializable是最严格的隔离级别。在Serializable隔离级别下，所有事务按照次序依次执行，因此，脏读、不可重复读、幻读都不会出现。虽然Serializable隔离级别下的事务具有最高的安全性，但是，由于事务是串行执行，所以效率会大大下降，应用程序的性能会急剧降低。如果没有特别重要的情景，一般都不会使用Serializable隔离级别。
+
+>默认隔离级别:如果没有指定隔离级别，数据库就会使用默认的隔离级别。在MySQL中，如果使用InnoDB，默认的隔离级别是Repeatable Read。
