--- a/Database/MySQL/常用语句.md
+++ b/Database/MySQL/常用语句.md
@@ -20,6 +20,33 @@ mysql登录:`mysql -h hostname -u root -p`
 
 删除表使用DROP TABLE语句：`DROP TABLE students;`
 
+**表的管理**
+
+```sql
+--创建表
+CREATE TABLE IF NOT EXISTS stuinfo(
+    stuId INT,
+    stuName VARCHAR(20),
+    gender CHAR,
+    bornDate DATETIME);
+
+DESC studentinfo;
+--修改表 alter
+ALTER TABLE 表名 ADD|MODIFY|DROP|CHANGE COLUMN 字段名 【字段类型】;
+--修改字段名
+ALTER TABLE studentinfo CHANGE  COLUMN sex gender CHAR;
+--修改表名
+ALTER TABLE stuinfo RENAME [TO]  studentinfo;
+--修改字段类型和列级约束
+ALTER TABLE studentinfo MODIFY COLUMN borndate DATE ;
+--添加字段
+ALTER TABLE studentinfo ADD COLUMN email VARCHAR(20) first;
+--删除字段
+ALTER TABLE studentinfo DROP COLUMN email;
+--删除表
+DROP TABLE [IF EXISTS] studentinfo;
+```
+
 修改表就比较复杂。如果要给students表新增一列birth:`ALTER TABLE students ADD COLUMN birth VARCHAR(10) NOT NULL;`
 
 要修改birth列，例如把列名改为birthday，类型改为VARCHAR(20)：`ALTER TABLE students CHANGE COLUMN birth birthday VARCHAR(20) NOT NULL;`
@@ -65,7 +92,18 @@ CREATE TABLE statistics (
 
 >确保INSERT语句的列和SELECT语句的列能一一对应，就可以在statistics表中直接保存查询的结果.
 
+**使用truncate语句删除**
 
+```sql
+-- 清空表的内容
+truncate table 表名
+```
+
+**delelte和truncate区别**
+
+- truncate不能加where条件，而delete可以加where条件
+- truncate的效率高一丢丢
+- truncate删除不能回滚，delete删除可以回滚
 
 
 
