--- a/Database/SQL/事务.md
+++ b/Database/SQL/事务.md
@@ -28,7 +28,7 @@ UPDATE accounts SET balance = balance + 100 WHERE id = 2;
 要手动把多条SQL语句作为一个事务执行，使用BEGIN开启一个事务，使用COMMIT提交一个事务，这种事务被称为显式事务:
 
 ```sql
-BEGIN;
+BEGIN;(or START TRANSACTION; START TRANSACTION是标准的SQL语法,也是官方推荐的)
 UPDATE accounts SET balance = balance - 100 WHERE id = 1;
 UPDATE accounts SET balance = balance + 100 WHERE id = 2;
 COMMIT;
@@ -48,6 +48,47 @@ ROLLBACK;
 ```
 
 >数据库事务是由数据库系统保证的，我们只需要根据业务逻辑使用它就可以。
+
+**START TRANSACTION, COMMIT, and ROLLBACK Syntax**
+
+* START TRANSACTION or BEGIN 开启了一个新的事务.
+* COMMIT 提交当前事务, 使这个事务的改变持久化.
+* ROLLBACK 回滚当前事务, 撤销这次事务的更改.
+
+`SET autocommit` 使当前会话`关闭/开启`autocommit mode(自动提交模式).默认情况下MySql运行的时候是开启的.这意味着只要你执行一条更新表的语句，那么MySQL就会存储更新操作到磁盘上使更改持久化，并且更改不可以回滚.
+
+for a single series of statements，可以使用`START TRANSACTION`隐式的禁用自动autocommit mode.
+
+```sql
+START TRANSACTION;
+SELECT @A:=SUM(salary) FROM table1 WHERE type=1;
+UPDATE table2 SET summary=@A WHERE type=1;
+COMMIT;
+```
+
+使用`START TRANSACTION`, autocommit模式一直会保持disabled直到使用COMMIT or ROLLBACK结束当前事务. The autocommit mode然后就会变成先前的状态值.
+
+**SAVEPOINT, ROLLBACK TO SAVEPOINT, and RELEASE SAVEPOINT Syntax**
+
+```sql
+SAVEPOINT identifier
+ROLLBACK [WORK] TO [SAVEPOINT] identifier
+RELEASE SAVEPOINT identifier
+```
+
+InnoDB支持`SAVEPOINT`, `ROLLBACK TO SAVEPOINT`, `RELEASE SAVEPOINT` SQL语句。
+
+SAVEPOINT语句用名字"identifier"设置了一个命名事务保存点，如果当前事务有一个相同名字的savepoint，那么老的savepoint会被删除，新的会被设置.
+
+`ROLLBACK TO SAVEPOINT`回滚一个事务到命名savepoint而不终止这个事务，Modifications that the current transaction made to rows after the savepoint was set are undone in the rollback,设置保存点后当前事务对行所做的修改在回滚中撤消。
+
+`RELEASE SAVEPOINT `语句从当前事务的savepoint集中删除命名的savepoint，没有commit和rollback发生。如果这个savepoint不存在，会报错.
+
+如果执行COMMIT，或者没有命名savepoint的ROLLBACK，则会删除当前事务的所有保存点。
+
+A new savepoint level is created when a stored function is invoked or a trigger is activated. The savepoints on previous levels become unavailable and thus do not conflict with savepoints on the new level. When the function or trigger terminates, any savepoints it created are released and the previous savepoint level is restored.
+
+这段话的大概意思是:调用存储的函数或激活触发器时，将创建新的savepoint level. 先前级别上的savepoint变得不可用，因此不会与新级别上的savepoint冲突。 当函数或触发器终止时，将释放它创建的任何savepoint，并恢复先前的savepoint级别。
 
 ### 隔离级别
 
@@ -74,7 +115,7 @@ Read Uncommitted是隔离级别最低的一种事务级别,在这种隔离级别
 -- 分别开启两个MySQL客户端连接，按顺序依次执行事务A和事务B
 
 -- 事务A
-SET TRANSACTION ISOLATION LEVEL READ UNCOMMITTED;
+SET session|global TRANSACTION ISOLATION LEVEL READ UNCOMMITTED;
 BEGIN;
 
 -- 事务B
@@ -161,3 +202,10 @@ COMMIT;
 >Serializable是最严格的隔离级别。在Serializable隔离级别下，所有事务按照次序依次执行，因此，脏读、不可重复读、幻读都不会出现。虽然Serializable隔离级别下的事务具有最高的安全性，但是，由于事务是串行执行，所以效率会大大下降，应用程序的性能会急剧降低。如果没有特别重要的情景，一般都不会使用Serializable隔离级别。
 
 >默认隔离级别:如果没有指定隔离级别，数据库就会使用默认的隔离级别。在MySQL中，如果使用InnoDB，默认的隔离级别是Repeatable Read。
+
+**如何避免事务的并发问题:通过设置事务的隔离级别**
+
+- READ UNCOMMITTED 会产生脏读
+- READ COMMITTED 可以避免脏读
+- REPEATABLE READ 可以避免脏读、不可重复读和一部分幻读
+- SERIALIZABLE可以避免脏读、不可重复读和幻读
