--- a/Database/Redis/3.1_热身.md
+++ b/Database/Redis/3.1_热身.md
@@ -5,54 +5,33 @@
 - []: 匹配括号间的任一字符，可以使用"-"符合表示一个范围，如a[b-d]可以匹配"ab","ac","ad"
 - \x: 匹配字符x，用于转义符号，例如要匹配?,就需要使用\?
 
-使用SET命令建立一个名为bar的键：
-
 ```shell
-redis＞SET bar 1
-OK
-```
+提示Redis不区分命令大小写(键和值是区分大小写的)，但这里均使用大写字母表示Redis命令。
 
-使用`KEYS *`就能获得Redis中所有的键了（或KEYS ba*或者KEYS bar）：
+创建名为bar的键：
+SET bar 1
 
-```shell
-redis＞ KEYS *
-1) "bar"
-```
-
->注意:KEYS命令需要遍历Redis中的所有键，当键的数量较多时会影响性能，不建议在生产环境中使用。
-
->提示Redis不区分命令大小写，但在本书中均会使用大写字母表示Redis命令。
+获得Redis所有的键（或KEYS ba*或者KEYS bar）,KEYS命令需要遍历Redis中的所有键，当键的数量较多时会影响性能，不建议在生产环境中使用
+KEYS *
+KEYS bar*
 
 判断一个键是否存在,如果键存在则返回整数类型1，否则返回0。
-
-```
 EXISTS key
-```
 
-删除键,可以删除一个或多个键，返回值是删除的键的个数
-
-```
+删除键,可以删除一个或多个键，返回值是删除的键的个数.
 DEL key [key …]
+
+清空一个Redis实例中所有数据库中的数据(慎用!!)
+FLUSHALL
+
+获得键值的数据类型,返回值可能是string（字符串类型）、hash（散列类型）、list（列表类型）、set（集合类型）、zset（有序集合类型）
+TYPE key
+
+LPUSHL命令的作用是向指定的列表类型键中增加一个元素，如果键不存在则创建它
+LPUSH foo 3
+TYPE foo
 ```
 
-技巧DEL命令的参数不支持通配符，但我们可以结合Linux的管道和xargs 命令自己实现删除所有符合规则的键。
 
->注意以下命令是在linux控制台输入，不是redis-cli控制台输入的：
+>DEL命令的参数不支持通配符，但我们可以结合Linux的管道和xargs 命令自己实现删除所有符合规则的键。注意以下命令是在linux控制台输入，不是redis-cli控制台输入的：比如要删除所有以“user:”开头的键，就可以执行redis-cli KEYS "user:*" | xargs redis-cli DEL。另外由于DEL命令支持多个键作为参数， 所以还可以执行redis-cli DEL 'redis-cli KEYS "user:*"'来达到同样的效果，但是性能更好。
 
-比如要删除所有以“user:”开头的键，就可以执行redis-cli KEYS "user:*" | xargs redis-cli DEL。另外由于DEL 命令支持多个键作为参数， 所以还可
-以执行redis-cli DEL 'redis-cli KEYS "user:*"'来达到同样的效果，但是性能更好。
-
-`FLUSHALL命令可以清空一个Redis实例中所有数据库中的数据`
-
-4．获得键值的数据类型
-
-`TYPE key`,TYPET命令用来获得键值的数据类型，返回值可能是string（字符串类型）、hash（散列类型）、list（列表类型）、set（集合类型）、zset（有序集合类型）。例如：
-
-```shell
-redis＞LPUSH bar 1
-(integer) 1
-redis＞TYPE bar
-list
-```
-
->LPUSHL命令的作用是向指定的列表类型键中增加一个元素，如果键不存在则创建它
