--- a/Database/Redis/3.2_字符串类型.md
+++ b/Database/Redis/3.2_字符串类型.md
@@ -1,16 +1,58 @@
-## 字符串类型
+## 字符串类型(Redis中最基本的数据类型)
 
-### 介绍
+### 概念
 
-字符串类型是Redis中最基本的数据类型，它能存储任何形式的字符串，包括二进制数据。可以用它存储用户的邮箱、JSON化的对象甚至是一张图片。一个字符串类型键允许存储的数据的最大容量是512MB。`字符串类型是其他4种数据类型的基础，其他数据类型和字符串类型的差别从某种角度来说只是组织字符串的形式不同。`例如，列表类型是以列表的形式组织字符串，而集合类型是以集合的形式组织字符串.
+字符串类型:它能存储任何形式的字符串，包括二进制数据(图片)。一个字符串类型键允许存储的值的最大容量是512MB。`字符串类型是其他4种数据类型的基础，其他数据类型和字符串类型的差别从某种角度来说只是组织字符串的形式不同。`例如，列表类型是以列表的形式组织字符串，而集合类型是以集合的形式组织字符串.
 
-### 命令
+```shell
+# 赋值与取值(当键不存在时会返回空结果nil)
+SET key value
+GET key
 
-1. 赋值与取值: SET key value, GET key, 当键不存在时会返回空结果.
-2. 递增数字:字符串类型可以存储任何形式的字符串，当存储的字符串是整数形式时("1")，例如,SET num 23, GET num, 可以得到"23", Redis提供了一个实用的命令INCR，其作用是让当前键对应的值递增，并返回递增后的值，用法为: INCR num
-3. 递增数字: 当要操作的键不存在时会默认键值为0，所以第一次递增后的结果是1。当键值不是整数时Redis会提示错误.
+# 递增数字(当存储的字符串是整数形式时)
+SET num 23
+TYPE num
+GET num
+INCR num
 
-### 实践
+# 当要操作的键不存在时,默认键值为0，所以递增后是1
+INCR num1
+
+# 当键值不是整数时Redis会提示错误
+SET num2 aa
+INCR num2
+
+# 增加指定的整数
+INCRBY num 5
+
+# 减少整数
+DECR num
+
+# 减少指定的整数
+DECRBY num 2
+
+# 增加指定浮点数
+INCRBYFLOAT num 2.5
+
+# 向尾部追加值,如果键不存在则将该键的值设置为value,返回值是追加后字符串的总长度
+APPEND num 7, 
+
+# 如果参数包含空格，在redis-cli中输入需要双引号以示区分
+set spacevalue "xzj xzj"
+
+# 获取字符串长度,如果键不存在则返回0
+STRLEN num
+
+# 字符串类型可以存储任何编码的字符串
+# 如果使用UTF-8编码，由于“你”和“好”两个字的UTF-8编码的长度都是3
+# 如果是其他编码就不一定了
+set chinese 你好
+strlen chinese
+
+# 同时获得/设置多个键值
+MGET num num2
+MSET num1 value1 num2 value2
+```
 
 #### Redis键名的命名规则
 
@@ -23,31 +65,39 @@
 
 3. 存储文章数据:每个字符串类型键只能存储一个字符串，而一篇博客文章是由标题、正文、作者与发布时间等多个元素构成的。为了存储这些元素，我们需要使用序列化函数将它们转换成一个字符串
 
-### 命令拾遗
+### 位操作
 
-1. 增加指定的整数: INCRBY key increment
-2. 减少指定的整数: DECR key, DECRBY key decrement
-3. 增加指定浮点数: INCRBYFLOAT key increment
-4. 向尾部追加值: APPEND key value, 如果键不存在则将该键的值设置为value,返回值是追加后字符串的总长度
-5. 如果参数包含空格，在redis-cli中输入需要双引号以示区分。
-6. 获取字符串长度: STRLEN key,如果键不存在则返回0
-7. 字符串类型可以存储二进制数据，它可以存储任何编码的字符串。例子中Redis接收到的是使用UTF-8编码的中文，由于“你”和“好”两个字的UTF-8编码的长度都是3，所以会返回6(如果是其他编码就不一定了)
-8. 同时获得/设置多个键值: MGET key [key …],MSET key value [key value …]
+>一个字节由8位组成,`SET foo bar`，bar的3个字母对应的ASCII码分别为98、97和114，转换成二进制后分别为1100010、1100001和1110010.
 
-#### 位操作
+```shell
+# 获得指定位置的二进制位的值(0或1),索引从0开始(注意index从右边开始,也就是低位),如果需要获取的二进制位的索引超出了键值的二进制位的实际长度则默认位值是0.
+GETBIT foo 0
 
->Redis提供了4个命令(GETBIT,SETBIT,BITCOUNT,BITOP)可以直接对二进制位进行操作，一个字节由8个二进制位组成,`SET foo bar`，bar的3个字母对应的ASCII码分别为98、97和114，转换成二进制后分别为1100010、1100001和1110010.
+# 设置指定位置的二进制位的值(返回值是该位置的旧值)
+SETBIT foo 6 0
 
-1. GETBIT命令可以获得一个字符串类型键指定位置的二进制位的值（0或1），
-索引从0开始：`GETBIT foo 0`,返回0，`GETBIT foo 6`返回1(注意index从右边开始)
-如果需要获取的二进制位的索引超出了键值的二进制位的实际长度则默认位值是0：
+# 设置的位置超过了键值的二进制位的长度，SETBIT命令会自动将中间的二进制位设置为0
+SETBIT foo 257 1
 
-2. SETBIT 命令可以设置字符串类型键指定位置的二进制位的值，返回值是该位置的旧值,
-`SETBIT foo 6 0`,`SETBIT foo 7 1`,`GET foo`,如果要设置的位置超过了键值的二进制位的长度，SETBIT命令会自动将中间的二进制位设置为0，同理设置一个不存在的键的指定二进制位的值会自动将其前面的位赋值为0：`SETBIT nofoo 10 1`,`GETBIT nofoo 5`
+# "设置不存在键"的指定二进制位的值会自动将其前面的位赋值为0
+SETBIT nofoo 10 1
+GETBIT nofoo 5
 
-3. BITCOUNT命令可以获得字符串类型键中`值是1的二进制位个数`，`BITCOUNT foo`
-,可以通过参数来限制统计的字节范围，如我们只希望统计前两个字节(即"aa"):`BITCOUNT foo 0 1`
+# 获得字符串类型键中值是1的二进制位个数
+BITCOUNT foo
 
-4. BITOPB命令可以对多个字符串类型键进行位运算，并将结果存储在destkey参数指定的键中。BITOP命令支持的运算操作有AND、OR、XOR和NOT。如我们可以对bar和aar进行OR运算：`SET foo1 bar`,`SET foo2 aar`,`BITOP OR res foo1 foo2`, GET res,得到"car"
+# 通过参数来限制统计的字节范围，如我们只希望统计前两个字节
+BITCOUNT foo 0 1
+
+# 对多个字符串类型键进行位运算，并将结果存储在destkey参数指定的键中
+SET foo1 bar
+SET foo2 aar
+
+# BITOP命令支持的运算操作有AND、OR、XOR和NOT
+BITOP OR res foo1 foo2
+
+# 得到"car"
+GET res
+```
 
 >利用位操作命令可以非常紧凑地存储布尔值。比如某网站的每个用户都有一个递增的整数ID，如果使用一个字符串类型键配合位操作来记录每个用户的性别（用户ID作为索引，二进制位值1和0表示男性和女性），那么记录100万个用户的性别只需占用100 KB多的空间，而且由于GETBIT和SETBIT的时间复杂度都是0(1)，所以读取二进制位值性能很高。
