--- a/Database/Redis/2.0_Redis配置文件以及常用命令.md
+++ b/Database/Redis/2.0_Redis配置文件以及常用命令.md
@@ -30,13 +30,14 @@ redis-server /path/to/redis.conf
 # 会覆盖配置文件中相应的参数：
 redis-server /path/to/redis.conf --loglevel warning
 
-# Redis默认不是以守护进程的方式运行，可以通过使用yes启用守护进程
+# Redis默认不是以守护进程的方式运行，
+# 如果你想让它在后台运行，可以通过使用yes.
 daemonize no
 
-# 当Redis以守护进程方式运行时，Redis默认会把pid写入/var/run/redis.pid文件，可以通过pidfile指定
+# 当Redis以守护进程方式运行时，Redis默认会把pid写入/var/run/redis.pid文件，你可以自己通过pidfile指定保存的位置
 pidfile /var/run/redis.pid
 
-# Redis默认监听端口为6379
+# Redis默认监听端口为6379,如果设置0表示不监听任何连接
 port 6379
 
 # 绑定的主机地址
@@ -45,10 +46,10 @@ bind 127.0.0.1
 # 当客户端闲置多长时间后关闭连接，如果指定为0，表示关闭该功能
 timeout 300
 
-# 指定日志记录级别，Redis总共支持四个级别：debug、verbose、notice、warning，默认为verbose
+# 指定日志记录级别，Redis总共支持四个级别：debug(开发测试阶段)、verbose、notice(适用于生产环境)、warning(仅仅一些重要的消息被记录)，默认为verbose
 loglevel verbose
 
-# 日志记录方式，默认为标准输出，如果配置Redis为守护进程方式运行，而这里又配置为日志记录方式为标准输出，则日志将会发送给/dev/null
+# 日志记录方式，默认为标准输出，如果配置Redis为守护进程方式运行，而这里又配置为日志记录方式为标准输出，则日志将会发送给/dev/null,可以通过修改logfile来指定日志文件的位置
 logfile stdout
 
 # 设置数据库的数量，默认数据库为0，可以使用SELECT <dbid>命令在连接上指定要连接的 数据库id
@@ -69,7 +70,9 @@ rdbcompression yes
 # 指定本地数据库文件名，默认值为dump.rdb
 dbfilename dump.rdb
 
-# 指定本地数据库存放目录
+# 指定本地数据库存放目录,例如上面的dump.rdb只指定了文件名
+# ,但是未指定目录，这里就可以指定，这里一定要配置的是一个目录，
+# 而不是文件名.
 dir ./
 
 # 设置当本机为slav服务时，设置master服务的IP地址及端口，在Redis启动时，它会自动从master进行数据同步
