--- a/Database/Redis/3.6_有序集合类型.md
+++ b/Database/Redis/3.6_有序集合类型.md
@@ -126,3 +126,7 @@ ZRANGE sortedSetsResult 0 -1 WITHSCORES
 
 # ZUNIONSTORE计算集合间的并集，用法ZINTERSTORE一样，不在赘述.
 ```
+
+### 有序集合类型的命令为什么以Z开头?
+
+>Z is as in XYZ, 因此一种说法是: 有序集合sorted set是集合set的另一种维度(dimension),相当于第三维，也就是Z.
