--- a/JAVA/EE/MyBatis/2.1_MyBatis快速入门.md
+++ b/JAVA/EE/MyBatis/2.1_MyBatis快速入门.md
@@ -58,51 +58,28 @@ try {
 
 >源码分析: org.mybatis.core.SourceAnalyze.SqlSession
 
+### 基于SqlSession
+
+>源码: org.mybatis.test.QuickStartBasedSqlSession
+
+### 基于Mapper接口
+
+>源码: org.mybatis.test.QuickStartBasedMapper
+
 ### 基于注解的映射配置
 
-在前面的讨论中，mybatis的全局配置文件(mybatis-config.xml)和映射器配置(UserMapper.xml)都是基于xml文件格式配置的。事实上mybatis也支持将映射配置直接配置在Mapper接口中。此时修改：
+>源码: org.mybatis.core.annotation.mapper.UserMapper
 
-1. 修改mybatis-config.xml的mappers元素配置，用注解配合代替xml映射配置
+## 总结
 
-```xml
-<mappers>
-        <!-- <mapper resource="mappers/UserMapper.xml"/> -->
-        <!--通过class属性指定UserMapper接口的全路径-->
-        <mapper class="org.mybatis.core.mapper.UserMapper"/>
-</mappers>
-```
+本节总共介绍了2种mybatis的使用方式:
 
-2. 在UserMapper接口的方法上，添加相关注解
-
-```java
-public interface UserMapper {
-   @Insert("INSERT INTO user(id,name,age) VALUES (#{id},#{name},#{age})")
-   public int insert(User user);
-   @Select(" select id,name,age from user where id= #{id}")
-   public User selectById(int id);
-   @Select(" select id,name,age from user")
-   public List<User> selectAll();
-   @Update("UPDATE user SET name=#{name},age=#{age} WHERE id=#{id}")
-   public int updateById(User user);
-   @Delete("DELETE FROM user WHERE id=#{id}")
-   public int deleteById(int id);
-   @Delete("DELETE FROM user")
-   public int deleteAll();
-}
-```
-
-> 其中@Insert、@Select、@Update、@Delete注解，分别对应xml配置中的<insert>、<update>、<delete>、<select>元素。而注解里的sql直接就是把UserMapper.xml文件中对应的元素中的sql搬过来。
-
-> 当然，mybatis中提供的注解远远不止这几个，我们接触的只是冰山一角。mybatis提供的注解org.apache.ibatis.annotations包下面，在后面的章节中，我会对这些注解逐一进行讲述。
-
-#### 本节总共介绍了2种mybatis的使用方式
-
-1. 通过xml映射文件，配置<insert>、<update>、<delete>、<select>元素
+1. 通过xml映射文件，配置`<insert>、<update>、<delete>、<select>`元素
 
 	* 又细分为直接操作SqlSession 
 
-	* Mapper接口：通过SqlSession获得Mapper接口的动态代理，接口的全路径要与xml映射文件namespace属性值相匹配，接口中的方法名与映射文件中配置的<insert>、<update>、<delete>、<select>元素id属性值相匹配。
+	* Mapper接口：通过SqlSession获得Mapper接口的动态代理，接口的全路径要与xml映射文件namespace属性值相匹配，接口中的方法名与映射文件中配置的`<insert>、<update>、<delete>、<select>`元素id属性值相匹配。
 
 2. 通过注解映射，在Mapper接口的相应方法上添加@Insert、@Update、@Delete、@Select注解。
 
-> 总的来说，直接操作SqlSession是最基础的使用方式，也最能帮助我们了解mybatis内部的核心工作流程，其他都是在这个基础上的封装。从笔者的工作经验来看，目前还是xml映射文件+Mapper接口的方式使用的最多。对于基于注解的方式，笔者并不建议，因为经常会出现在一些xml映射文件中支持的功能，使用注解的方式就不支持了。
+> 总的来说，直接操作SqlSession是最基础的使用方式，也最能帮助我们了解mybatis内部的核心工作流程，其他都是在这个基础上的封装。从笔者的工作经验来看，目前还是`xml映射文件+Mapper接口`的方式使用的最多。`对于基于注解的方式，笔者并不建议，因为经常会出现在一些xml映射文件中支持的功能，使用注解的方式就不支持了。`
