--- a/Database/Redis/1.0_Redis准备.md
+++ b/Database/Redis/1.0_Redis准备.md
@@ -50,11 +50,17 @@ cd redis-stable
 # 编译
 make
 
+# 如果使用make编译遇到错误:zmalloc.h:50:31: fatal error: jemalloc/jemalloc.h: No such file or directory
+# 就使用
+make MALLOC=libc
+
+# 在实际运行Redis前推荐使用make test命令测试Redis是否编译正确，
+# 尤其是在编译一个不稳定版本的Redis时.(可能会遇到错误)
+make test
+
 # 如果在编译后执行了make install命令，这些程序会被复制到/usr/local/bin目录内
 make install
 ```
-
->在实际运行Redis前推荐使用make test命令测试Redis是否编译正确，尤其是在编译一个不稳定版本的Redis时。
 
 除了手工编译外，还可以使用操作系统中的软件包管理器来安装Redis，但目前大多数软件包管理器中的Redis的版本都较古老。考虑到Redis的每次升级都提供了对以往版本的问题修复和性能提升，使用最新版本的Redis往往可以提供更加稳定的体验。如果希望享受包管理器带来的便利，在安装前请确认您使用的软件包管理器中Redis的版本并了解该版本与最新版之间的差异。`http://redis.io/topics/problems中列举了一些在以往版本中存在的已知问题。`
 
