--- a/Docker/01.0_Docker-quick-start.md
+++ b/Docker/01.0_Docker-quick-start.md
@@ -91,11 +91,22 @@ $ docker container run -it ubuntu bash
 
 # 对于那些不会自动终止的容器，必须使用docker container kill 命令手动终止。
 $ docker container kill [containID]
+
+# 可以通过以下命令来便捷的查看镜像、容器、数据卷所占用的空间
+docker system df
+
+# docker image ls 还支持强大的过滤器参数 --filter，或者简写 -f。
+# 比如，我们希望看到在 mongo:3.2 之后建立的镜像，可以用下面的命令：
+docker image ls -f since=mongo:3.2
+
+# 想查看某个位置之前的镜像也可以，只需要把 since 换成 before 即可。
+# 此外，如果镜像构建时，定义了 LABEL，还可以通过 LABEL 来过滤。
+$ docker image ls -f label=com.example.version=0.1
 ```
 
-## 容器文件
+## 容器文件(Docker 容器通过 Docker 镜像来创建)
 
-image 文件生成的容器实例，本身也是一个文件，称为容器文件。也就是说，一旦容器生成，就会同时存在两个文件： image 文件和容器文件(docker命令也可以这么分，分成对image的操作和对容器文件container的操作)。而且关闭容器并不会删除容器文件，只是容器停止运行而已。
+image镜像文件生成的容器实例，本身也是一个文件，称为容器文件。也就是说，一旦容器生成，就会同时存在两个文件： image 文件和容器文件(docker命令也可以这么分，分成对image的操作和对容器文件container的操作)。而且关闭容器并不会删除容器文件，只是容器停止运行而已。
 
 ```shell
 # 列出本机正在运行的容器
@@ -119,5 +130,3 @@ $ docker container rm [containerID]
 这就需要用到 Dockerfile 文件。它是一个文本文件，用来配置 image。Docker 根据 该文件生成二进制的 image 文件。
 
 下面通过一个实例，演示如何编写 Dockerfile 文件。
-
-
