--- a/Database/Redis/4.2_生存时间.md
+++ b/Database/Redis/4.2_生存时间.md
@@ -138,3 +138,123 @@ maxmemory-policy支持的规则如下所示。其中的LRU（Least Recently Used
 >如当maxmemory-policy设置为allkeys-lru时，一旦Redis占用的内存超过了限制值，Redis会不断地删除数据库中最近最少使用的键① ，直到占用的内存小于限制值。
 
     注释：①事实上Redis并不会准确地将整个数据库中最久未被使用的键删除，而是每次从数据库中随机取3个键并删除这3个键中最久未被使用的键。删除生存时间最接近的键的实现方法也是这样。“3”这个数字可以通过Redis的配置文件中的maxmemory-samples参数设置
+
+## 实现Redis分布式锁
+
+对于某个原本带有生存时间（TTL）的键来说， 当 SET 命令成功在这个键上执行时， 这个键原有的TTL将被清除
+
+>从 Redis 2.6.12 版本开始， SET 命令的行为可以通过一系列参数来修改：
+
+- EX second ：设置键的过期时间为 second 秒。 SET key value EX second 效果等同于 SETEX key second value 。
+- PX millisecond ：设置键的过期时间为 millisecond 毫秒。 SET key value PX millisecond 效果等同于 PSETEX key millisecond value 。
+- NX ：只在键不存在时，才对键进行设置操作。 SET key value NX 效果等同于 SETNX key value 。
+- XX ：只在键已经存在时，才对键进行设置操作。
+
+>因为 SET 命令可以通过参数来实现和 SETNX 、 SETEX 和 PSETEX 三个命令的效果，所以将来的 Redis 版本可能会废弃并最终移除 SETNX 、 SETEX 和 PSETEX 这三个命令。
+
+返回值：
+
+1. 在 Redis 2.6.12 版本以前， SET 命令总是返回 OK 。
+2. 从 Redis 2.6.12 版本开始， SET 在设置操作成功完成时，才返回 OK 。如果设置了 NX 或者 XX ，但因为条件没达到而造成设置操作未执行，那么命令返回空批量回复（NULL Bulk Reply）。
+
+### 示例
+
+```shell
+# 对不存在的键进行设置
+SET key "value"
+GET key
+
+# 对已存在的键进行设置
+SET key "new-value"
+GET key
+
+# 使用 EX 选项
+SET key-with-expire-time "hello" EX 10086
+GET key-with-expire-time
+TTL key-with-expire-time
+
+# 使用 PX 选项
+SET key-with-pexpire-time "moto" PX 123321
+GET key-with-pexpire-time
+PTTL key-with-pexpire-time
+
+# 使用 NX 选项
+# 键不存在，设置成功
+SET not-exists-key "value" NX
+GET not-exists-key
+
+# 键已经存在，设置失败
+SET not-exists-key "new-value" NX
+# 维持原值不变
+GEt not-exists-key
+
+# 使用 XX 选项
+EXISTS exists-key
+(integer) 0
+
+redis 127.0.0.1:6379> SET exists-key "value" XX
+(nil)   # 因为键不存在，设置失败
+
+redis 127.0.0.1:6379> SET exists-key "value"
+OK      # 先给键设置一个值
+
+redis 127.0.0.1:6379> SET exists-key "new-value" XX
+OK      # 设置新值成功
+
+redis 127.0.0.1:6379> GET exists-key
+"new-value"
+
+# NX 或 XX 可以和 EX 或者 PX 组合使用
+
+redis 127.0.0.1:6379> SET key-with-expire-and-NX "hello" EX 10086 NX
+OK
+
+redis 127.0.0.1:6379> GET key-with-expire-and-NX
+"hello"
+
+redis 127.0.0.1:6379> TTL key-with-expire-and-NX
+(integer) 10063
+
+redis 127.0.0.1:6379> SET key-with-pexpire-and-XX "old value"
+OK
+
+redis 127.0.0.1:6379> SET key-with-pexpire-and-XX "new value" PX 123321
+OK
+
+redis 127.0.0.1:6379> GET key-with-pexpire-and-XX
+"new value"
+
+redis 127.0.0.1:6379> PTTL key-with-pexpire-and-XX
+(integer) 112999
+```
+
+## 使用模式
+
+>命令 SET resource-name anystring NX EX max-lock-time 是一种在 Redis 中实现锁的简单方法。
+
+客户端执行以上的命令：
+
+1. 如果服务器返回 OK ，那么这个客户端获得锁。
+2. 如果服务器返回 NIL ，那么客户端获取锁失败，可以在稍后再重试。
+
+设置的过期时间到达之后，锁将自动释放。
+
+可以通过以下修改，让这个锁实现更健壮：
+
+- 不使用固定的字符串作为键的值，而是设置一个不可猜测（non-guessable）的长随机字符串，作为口令串（token）。
+- 不使用 DEL 命令来释放锁，而是发送一个 Lua 脚本，这个脚本只在客户端传入的值和键的口令串相匹配时，才对键进行删除。
+
+>这两个改动可以防止持有过期锁的客户端误删现有锁的情况出现。
+
+以下是一个简单的解锁脚本示例：
+
+```lua
+if redis.call("get",KEYS[1]) == ARGV[1]
+then
+    return redis.call("del",KEYS[1])
+else
+    return 0
+end
+```
+
+>这个脚本可以通过 EVAL ...script... 1 resource-name token-value 命令来调用。
