--- a/JAVA/core/src/main/resources/并发编程/7.0-java并发包--线程池/7.1-实现自己的Executor.md
+++ b/JAVA/core/src/main/resources/并发编程/7.0-java并发包--线程池/7.1-实现自己的Executor.md
@@ -1,3 +1,5 @@
+# 实现自己的Executor
+
 JDK自带的executors的实现都是基于线程池和任务队列的。
 
 ```java
@@ -13,8 +15,8 @@ public interface Executor {
 class DirectExecutor implements Executor {
      public void execute(Runnable r) { 
          r.run(); 
-     } 
- }
+     }
+}
 ```
 
 >在这种情况下，如果向Executor中提交一个任务，会立即进行执行。其缺点在于，任务的执行不是异步的，某个线程向Executor中提交一个任务之后，必须等到这个线程执行完成才能继续往下执行。
@@ -34,10 +36,4 @@ class ThreadPerTaskExecutor implements Executor {
 
 >示例:org.java.core.base.concurrent.chapter7.SimpleThreadPoolExecutor.java
 
-通常情况下，我们不需要自己实现Executor，java.util.concurrent包中，已经提供了默认的实现，如：
-
-1. ThreadPoolExecutor
-2. ScheduledThreadPoolExecutor
-3. ForkJoinPool
-
-并且提供了一个工具类Executors，用于创建其实例。
+通常情况下，我们不需要自己实现Executor，java.util.concurrent包中，已经提供了默认的实现，如：`ThreadPoolExecutor`,`ScheduledThreadPoolExecutor`,`ForkJoinPool`,并且提供了一个工具类`Executors`，用于创建其实例。
