--- a/JAVA/core/src/main/resources/并发编程/7.0-java并发包--线程池/7.3_Callable与Future.md
+++ b/JAVA/core/src/main/resources/并发编程/7.0-java并发包--线程池/7.3_Callable与Future.md
@@ -1,8 +1,6 @@
-## Callable和Future的作用
+## 使用Callable与Future
 
->Callable与Future的作用是，我们可以启动A线程去执行某个任务，而B线程等待获取A线程执行的结果,假设线程A中进行某种运算，而主线程需要等待其运算结果，以便进行接下来的操作。
-
-在ExecutorService接口中声明了若干个submit方法的重载版本：
+>一般情况下是配合ExecutorService来使用的，在ExecutorService接口中声明了若干个submit方法的重载版本,暂时只需要知道Callable一般是和ExecutorService配合来使用的,一般情况下我们使用第一个submit方法和第三个submit方法，第二个submit方法很少使用。
 
 ```java
 // 第一个submit方法里面的参数类型就是Callable。
@@ -11,7 +9,7 @@
 Future<?> submit(Runnable task);
 ```
 
-暂时只需要知道Callable一般是和ExecutorService配合来使用的,一般情况下我们使用第一个submit方法和第三个submit方法，第二个submit方法很少使用。
+## Future
 
 >Future类位于java.util.concurrent包下，它是一个接口：
 
