--- a/JAVA/core/src/main/resources/并发编程/4.0-并发编程深入/4.1-Java内存模型.md
+++ b/JAVA/core/src/main/resources/并发编程/4.0-并发编程深入/4.1-Java内存模型.md
@@ -45,9 +45,9 @@ org.java.core.base.concurrent.chapter4.MySharedObject.java
 
 通常情况下，当一个CPU需要`读取主存时`，它会将`主存`的部分`读到CPU缓存`中。它甚至可能`将缓存中的部分内容读到它的内部寄存器中`，然后在寄存器中执行操作。当CPU需要`将结果写回到主存`中去时，它会将内部寄存器的值刷新到缓存中，然后在某个时间点将值刷新回主存。
 
-#### Java内存模型和硬件内存架构之间的桥接
+## Java内存模型和硬件内存架构之间的桥接
 
-Java内存模型与硬件内存架构之间存在差异。硬件内存架构没有区分线程栈和堆。对于硬件，所有的线程栈和堆都分布在主存中。部分线程栈和堆可能有时候会出现在CPU缓存中和CPU内部的寄存器中，见:![线程栈和堆在硬件上的存储](./线程栈和堆在硬件上的存储.png)
+Java内存模型与硬件内存架构之间存在差异。硬件内存架构没有区分线程栈和堆。线程栈和堆有时候会出现在硬件的主存中,有时候会出现在硬件的CPU缓存中和硬件的CPU内部寄存器中，见:![线程栈和堆在硬件上的存储](./线程栈和堆在硬件上的存储.png)
 
 当对象和变量被存放在计算机中各种不同的内存区域中时引发的问题:
 
