--- a/JAVA/core/src/main/resources/并发编程/3.0-Java同步与锁/自旋锁.md
+++ b/JAVA/core/src/main/resources/并发编程/3.0-Java同步与锁/自旋锁.md
@@ -58,7 +58,9 @@ atomicInteger.incrementAndGet(); //执行自增1
 
 自旋锁不会使线程状态发生切换，一直处于用户态，即线程一直都是active的；不会使线程进入阻塞状态，减少了不必要的上下文切换，减少进程切换导致的系统开销.
 
-### 自适应锁
+### 自适应锁(适应性自旋锁)
+
+在使用 `CAS` 时，如果操作失败，`CAS` 会自旋再次尝试。由于自旋是需要消耗 `CPU` 资源的，所以如果长期自旋就白白浪费了 `CPU`。`JDK1.6`加入了适应性自旋:如果某个锁自旋很少成功获得，那么下一次就会减少自旋。
 
 >自适应意味着自旋的时间（次数）不再固定，而是由前一次在同一个锁上的自旋时间及锁的拥有者的状态来决定。如果在同一个锁对象上，自旋等待刚刚成功获得过锁，并且持有锁的线程正在运行中，那么虚拟机就会认为这次自旋也是很有可能再次成功，进而它将允许自旋等待持续相对更长的时间。如果对于某个锁，自旋很少成功获得过，那在以后尝试获取这个锁时将可能省略掉自旋过程，直接阻塞线程，避免浪费处理器资源。
 
@@ -66,7 +68,9 @@ atomicInteger.incrementAndGet(); //执行自增1
 
 ## 无锁 VS 偏向锁 VS 轻量级锁 VS 重量级锁
 
-这四种锁是指锁的状态，专门针对synchronized的.首先为什么Synchronized能实现线程同步？
+这四种锁是指锁的状态，专门针对synchronized的.`JDK1.6` 中对 `synchronized` 进行了各种优化，为了能减少获取和释放锁带来的消耗引入了`偏向锁`和`轻量锁`.(原来的未优化的成为重量锁)
+
+首先为什么Synchronized能实现线程同步？
 
 >Java对象头:synchronized是悲观锁，在操作同步资源之前需要给同步资源先加锁，这把锁就是存在Java对象头里的.我们以Hotspot虚拟机为例，Hotspot的对象头主要包括两部分数据：Mark Word（标记字段）、Klass Pointer（类型指针）:
 
@@ -90,34 +94,44 @@ atomicInteger.incrementAndGet(); //执行自增1
 >无锁没有对资源进行锁定，所有的线程都能访问并修改同一个资源，但同时只有一个线程能修改成功。
 无锁的特点就是修改操作在循环内进行，线程会不断的尝试修改共享资源。如果没有冲突就修改成功并退出，否则就会继续循环尝试。如果有多个线程修改同一个值，必定会有一个线程能修改成功，而其他修改失败的线程会不断重试直到修改成功。`上面我们介绍的CAS原理及应用即是无锁的实现。无锁无法全面代替有锁，但无锁在某些场合下的性能是非常高的。`
 
-### 偏向锁
-
-**同一线程执行同步资源时自动获取锁**
-
-偏向锁是指一段同步代码一直被一个线程所访问，那么该线程会自动获取锁，降低获取锁的代价。
-在大多数情况下，锁总是由同一线程多次获得，不存在多线程竞争，`所以出现了偏向锁。其目标就是在只有一个线程执行同步代码块时能够提高性能。`
-
-当一个线程访问同步代码块并获取锁时，会在Mark Word里存储锁偏向的线程ID。在线程进入和退出同步块时不再通过CAS操作来加锁和解锁，而是检测Mark Word里是否存储着指向当前线程的偏向锁。引入偏向锁是为了在无多线程竞争的情况下尽量减少不必要的轻量级锁执行路径，因为轻量级锁的获取及释放依赖多次CAS原子指令，而偏向锁只需要在置换ThreadID的时候依赖一次CAS原子指令即可。
-
->偏向锁只有遇到其他线程尝试竞争偏向锁时，持有偏向锁的线程才会释放锁，线程不会主动释放偏向锁。偏向锁的撤销，需要等待全局安全点（在这个时间点上没有字节码正在执行），它会首先暂停拥有偏向锁的线程，判断锁对象是否处于被锁定状态。撤销偏向锁后恢复到无锁（标志位为“01”）或轻量级锁（标志位为“00”）的状态。
-
-偏向锁在JDK 6及以后的JVM里是默认启用的。可以通过JVM参数关闭偏向锁：-XX:-UseBiasedLocking=false，关闭之后程序默认会进入轻量级锁状态。
-
 ### 轻量级锁
 
 **多个线程竞争同步资源时，没有获取资源的线程自旋等待锁释放**
 
 是指`当锁是偏向锁的时候，被另外的线程所访问，偏向锁就会升级为轻量级锁，其他线程会通过自旋的形式尝试获取锁，不会阻塞，从而提高性能。`
 
-在代码进入同步块的时候，如果同步对象锁状态为无锁状态（锁标志位为“01”状态，是否为偏向锁为“0”），虚拟机首先将在当前线程的栈帧中建立一个名为锁记录（Lock Record）的空间，用于存储锁对象目前的Mark Word的拷贝，然后拷贝对象头中的Mark Word复制到锁记录中。
+在代码进入同步块的时候，如果同步对象锁为无锁状态（无锁标志位为“01”状态，是否为偏向锁为“0”），虚拟机首先将在当前线程的栈帧中建立`一个名为锁记录（Lock Record）的空间`，同时将`锁对象`的对象头中 `Mark Word(对象锁的一个标记)` 拷贝到锁记录(Lock Record-在线程栈帧中)中，拷贝成功后，再尝试使用 `CAS` 将锁对象的对象头中的 `Mark Word` 更新为指向`锁记录(Lock Record)`的指针,并将Lock Record里的owner指针指向对象的Mark Word。
 
-拷贝成功后，虚拟机将使用CAS操作尝试将对象的Mark Word更新为指向Lock Record的指针，并将Lock Record里的owner指针指向对象的Mark Word。
+如果这个更新动作成功了，那么这个线程就获得了锁，并且锁对象`Mark Word的锁标志位设置为“00”`，表示此对象处于轻量级锁定状态。
 
-如果这个更新动作成功了，那么这个线程就拥有了该对象的锁，并且对象Mark Word的锁标志位设置为“00”，表示此对象处于轻量级锁定状态。
+如果更新失败了，虚拟机首先会检查`锁对象的Mark Word`是否指向当前线程的栈帧，如果是就说明当前线程已经拥有锁，那可以直接进入同步块，否则说明多个线程竞争锁, 若当前只有一个等待线程，则该线程通过自旋进行等待。但是当自旋超过一定的次数，或者一个线程在持有锁，一个线程在自旋，`又有第三个线程来访时`，轻量级锁升级为重量级锁。
 
-如果轻量级锁的更新操作失败了，虚拟机首先会检查对象的Mark Word是否指向当前线程的栈帧，如果是就说明当前线程已经拥有了这个对象的锁，那就可以直接进入同步块继续执行，否则说明多个线程竞争锁。
+#### 轻量锁解锁
 
->若当前只有一个等待线程，则该线程通过自旋进行等待。但是当自旋超过一定的次数，或者一个线程在持有锁，一个在自旋，又有第三个来访时，轻量级锁升级为重量级锁。
+轻量锁的解锁过程也是利用 `CAS` 来实现的，会尝试将持有锁的线程的线程栈帧中保存的`锁记录(Lock Record)`替换回锁对象的 `Mark Word(保存在持有锁的线程的栈帧中)` 。如果替换成功则说明整个同步操作完成，失败则说明有其他线程尝试获取锁，这时就会唤醒被挂起的线程( 此时已经膨胀为`重量锁`)
+
+轻量锁能提升性能的原因是：
+
+认为大多数锁在整个同步周期都不存在竞争，所以使用 `CAS` 比使用互斥开销更少。但如果锁竞争激烈，轻量锁就不但有互斥的开销，还有 `CAS` 的开销，甚至比重量锁更慢。
+
+### 偏向锁
+
+**同一线程执行同步资源时自动获取锁**
+
+为了进一步的降低获取锁的代价，`JDK1.6` 之后还引入了偏向锁。
+
+偏向锁是指一段同步代码一直被一个线程所访问，那么该线程会自动获取锁，降低获取锁的代价。
+在大多数情况下，锁总是由同一线程多次获得，不存在多线程竞争，`所以出现了偏向锁。其目标就是在只有一个线程执行同步代码块时能够提高性能。`
+
+当线程访问同步块时，会使用 `CAS` 将线程 ID 更新到锁对象的 `Mark Word` 中，如果更新成功则获得偏向锁，并且之后每次进入这个对象锁相关的同步块时都不需要再次获取锁了。
+
+当一个线程访问同步代码块并获取锁时，`会在Mark Word里存储锁偏向的线程ID`。在线程进入和退出同步块时不再通过CAS操作来加锁和解锁，而是检测`Mark Word`里是否存储着指向当前线程的偏向锁。
+
+引入偏向锁是为了在无多线程竞争的情况下尽量减少不必要的轻量级锁执行路径，因为轻量级锁的获取及释放依赖多次CAS原子指令，而偏向锁只需要在置换ThreadID的时候依赖一次CAS原子指令即可。
+
+>偏向锁只有遇到其他线程尝试竞争偏向锁时，持有偏向锁的线程才会释放锁，线程不会主动释放偏向锁。偏向锁的撤销，需要等待全局安全点（在这个时间点上没有字节码正在执行），它会首先暂停拥有偏向锁的线程，根据锁对象目前是否被锁来判定将锁对象头中的 `Mark Word` 设置为无锁（标志位为“01”）或者是轻量锁状态（标志位为“00”）。
+
+偏向锁在JDK 6及以后的JVM里是默认启用的。偏向锁可以提高带有同步却没有竞争的程序性能，但如果程序中大多数锁都存在竞争时，那偏向锁就起不到太大作用。可以通过JVM参数关闭偏向锁：-XX:-UseBiasedLocking=false，关闭之后程序默认会进入轻量级锁状态。
 
 ### 重量级锁
 
