--- a/JAVA/core/src/main/resources/并发编程/7.0-java并发包--线程池/7.7_ScheduledThreadPoolExecutor.md
+++ b/JAVA/core/src/main/resources/并发编程/7.0-java并发包--线程池/7.7_ScheduledThreadPoolExecutor.md
@@ -1,18 +1,22 @@
+# ScheduledThreadPoolExecutor
+
+![](ScheduledPoolExecutor.png)
+
 ScheduledThreadPoolExecutor是ThreadPoolExecutor的子类，同时实现了ScheduledExecutorService接口，它可另行安排在给定的延迟后运行任务(Callable，Runnable)，或者定期执行命令。此类要优于 Timer。
 
 虽然此类继承自ThreadPoolExecutor，但是几个继承的调整方法对此类并无作用。特别是，因为它作为一个使用 corePoolSize 线程和一个无界队列的固定大小的池，所以调整 maximumPoolSize 没有什么效果。
 
-可以看到ScheduledThreadPoolExecutor实现了ScheduledExecutorService接口，延迟或者定时执行某个任务的方法，都定义在这个接口中:
-
 ```java
+// 可以看到ScheduledThreadPoolExecutor实现了ScheduledExecutorService接口，
+// 延迟或者定时执行某个任务的方法，都定义在这个接口中:
 public interface ScheduledExecutorService extends ExecutorService {
 
-//延迟指定时间来执行某个任务
+// 延迟指定时间来执行某个任务
 public ScheduledFuture<?> schedule(Runnable command,long delay, TimeUnit unit);
 
 public <V> ScheduledFuture<V> schedule(Callable<V> callable,long delay,TimeUnit unit);
  
-//延迟指定时间后，定时执行某个任务
+// 延迟指定时间后，定时执行某个任务
 public ScheduledFuture<?> scheduleAtFixedRate(Runnable command,
     long initialDelay,long period,TimeUnit unit);
 
@@ -32,22 +36,13 @@ public abstract class AbstractExecutorService implements ExecutorService {
 public <T> Future<T> submit(Callable<T> task) {
     if (task == null) throw new NullPointerException();
     RunnableFuture<T> ftask = newTaskFor(task);
-    execute(ftask);//构造之后，立即执行
+    execute(ftask);// 构造之后，立即执行(不会延时,所以此方法要覆盖)
     return ftask;
 }
 protected <T> RunnableFuture<T> newTaskFor(Callable<T> callable) {
     return new FutureTask<T>(callable);
 }
-...
 }
 ```
 
 在ScheduledThreadPoolExecutor中之所以选择直接覆盖submit方法而不是newTaskFor方法，因为AbstractExecutorService中调用newTaskFor方法之后就立即执行了(调用execute)，我们这里要实现的是延迟，或者定时执行某个任务，不能立即执行，所以选择覆盖submit方法，进行完全重写。
-
->指定延迟时间执行：
-
-```java
-public <V> ScheduledFuture<V> schedule(Callable<V> callable,long delay,TimeUnit unit)
-
-public ScheduledFuture<?> schedule(Runnable command, long delay, TimeUnit unit)
-```
