--- a/JAVA/core/src/main/resources/并发编程/4.0-并发编程深入/4.1-Java内存模型.md
+++ b/JAVA/core/src/main/resources/并发编程/4.0-并发编程深入/4.1-Java内存模型.md
@@ -1,37 +1,6 @@
-`Java内存模型`规范了`Java虚拟机`与`计算机内存`是如何协同工作的。
-`Java虚拟机是一个完整的计算机的一个模型`，因此这个模型自然也`包含一个内存模型`——又称为Java内存模型。
+见classpath: `JVM/1.1_Java代码说明JVM内存布局.md`
 
-你想设计表现良好的并发程序，理解Java内存模型是非常重要的。
-
-Java内存模型规定了如何和何时可以看到由其他线程修改过后的共享变量的值，以及在必须时如何同步的访问共享变量。
-
-### Java内存模型内部原理
-
-Java内存模型把Java虚拟机内部划分为`线程栈`和`堆`.
-
-![Java内存模型的逻辑视图](./Java-内存模型.png)
-
-每一个运行在Java虚拟机的线程都拥有自己的线程栈,线程栈包含了这个线程调用的方法当前执行点相关的信息。一个线程仅能访问自己的线程栈。一个线程创建的`原始类型的本地变量`对其它线程不可见，仅自己可见。即使两个线程执行同样的代码，这两个线程任然在自己的线程栈`创建本地变量`。因此，`每个线程 拥有每个本地变量的独有版本`。
-
->所有原始类型的本地变量都存放在线程栈上，因此对其它线程不可见。
-
-堆上包含在Java程序中创建的所有对象，无论是哪一个对象创建的。如果一个对象被创建然后赋值给一个局部变量，或者用来作为另一个对象的成员变量，这个对象任然是存放在堆上。
-
-![本地变量存放在线程栈上，对象存放在堆上](./本地变量和对象在Java中的存储.png)
-
-1. 本地变量和对象在Java中的存储
-2. 一个本地变量也可能是`指向一个对象的一个引用`。这种情况下，这个引用变量（本地变量）存放在线程栈上，但是对象本身存放在堆上。
-3. 一个对象可能包含方法，这些方法可能包含本地变量。这些本地变量任然存放在线程栈上，即使这些方法所属的对象存放在堆上。
-4. 一个对象的成员变量可能随着这个对象自身存放在堆上。不管这个成员变量是原始类型还是引用类型。
-5. 静态成员变量跟随着类定义一起也存放在堆上
-6. 存放在堆上的对象可以被所有持有对这个对象引用的线程访问。当一个线程访问一个对象时，它也可以访问这个对象的成员变量。如果两个线程同时调用同一个对象上的同一个方法，它们将会都访问这个对象的成员变量，但是每一个线程都拥有这个本地变量的私有拷贝。
-
->示例:org.java.core.base.concurrent.chapter4.MyRunnable.java
-org.java.core.base.concurrent.chapter4.MySharedObject.java
-
-以上的2个示例对应图![线程栈和堆-1](./线程栈和堆-1.png)
-
-### 硬件内存架构
+## 硬件内存架构
 
 现代`硬件内存模型`与`Java内存模型`有一些不同。`理解硬件内存模型架构`以及`Java内存模型`如何与它协同工作也是非常重要的。这部分描述了通用的硬件内存架构，下面的部分将会描述Java内存是如何与它“联手”工作的。
 
