--- a/JAVA/core/src/main/resources/JVM/4.1_jps.md
+++ b/JAVA/core/src/main/resources/JVM/4.1_jps.md
@@ -1,4 +1,4 @@
-jps(Java Virtual Machine Process Status Tool)是JDK 1.5提供的一个显示当前所有java进程pid的命令(只能显示当前用户的java进程)
+jps(Java Virtual Machine Process Status Tool)是JDK 1.5提供的一个显示当前所有java进程pid的命令
 
 ```shell
 jps
@@ -9,10 +9,11 @@ jps -l
 # -v 输出传递给JVM的参数
 jps -v
 
-# -m 输出传递给main 方法的参数，在嵌入式jvm上可能是null
+# -m 输出传递给main 方法的参数
 jps -m
 
 # 这些命令也可以联合使用
 jps -lmv
 ```
 
+>注：jps命令有个地方很不好，似乎只能显示当前用户的java进程，要显示其他用户的还是只能用unix/linux的ps命令。
