--- a/JAVA/core/src/main/resources/JVM/5.1_Java堆内存和栈内存.md
+++ b/JAVA/core/src/main/resources/JVM/5.1_Java堆内存和栈内存.md
@@ -11,7 +11,7 @@
 
 堆不需要连续内存，并且可以动态增加其内存，增加失败会抛出 OutOfMemoryError 异常。
 
-可以通过 -Xms 和 -Xmx 这两个虚拟机参数来指定一个程序的堆内存大小，第一个参数设置初始值，第二个参数设置最大值。
+可以通过 -Xms 和 -Xmx 这两个虚拟机参数来指定一个程序的堆内存大小，第一个参数设置初始值，第二个参数设置最大值。(将-Xms和-Xmx设置为一样，就可以禁止自动扩展堆内存)
 
 ```java
 java -Xms1M -Xmx2M HackTheJava
