--- a/JAVA/core/src/main/java/org/java/core/advanced/reference/各类引用的区别.md
+++ b/JAVA/core/src/main/java/org/java/core/advanced/reference/各类引用的区别.md
@@ -37,7 +37,7 @@
     </tbody>
 </table>
 
-Java这四种引用的级别由高到低依次为：`强引用 > 软引用 > 弱引用 > 虚引用`
+Java对对象的引用分为强引用、软引用、弱引用、虚引用四种（引用强度逐渐减弱）
 
 ## 强引用
 
@@ -71,9 +71,15 @@ public void clear() {
 }
 ```
 
-## 软引用
+## 软引用(SoftReference)
 
->用来描述一些还有用但是并非必须的对象，在Java中用java.lang.ref.SoftReference类来表示。对于软引用关联着的对象，只有在内存不足的时候JVM才会回收该对象。因此，这一点可以很好地用来解决OOM的问题，并且这个特性很适合用来实现缓存：比如网页缓存、图片缓存等。
+>用来描述一些还有用但是并非必须的对象，在Java中用java.lang.ref.SoftReference类来表示。
+
+对于软引用关联着的对象，如果内存空间足够，垃圾回收器就不会回收它,只有在内存不足的时候JVM才会回收该对象。只要垃圾回收器没有回收它，该对象就可以被程序使用。
+
+因此，这一点可以很好地用来解决OOM的问题，并且这个特性很适合用来实现缓存：比如网页缓存、图片缓存等。
+
+在程序设计中一般很少使用弱引用与虚引用，使用软引用的情况较多，这是因为软引用可以加速JVM对垃圾内存的回收速度，可以维护系统的运行安全，防止内存溢出（OutOfMemory）等问题的产生。
 
 ```java
 // 浏览器网页缓存实例：
@@ -115,7 +121,7 @@ Book book = weakReference.get();
 
 ## 虚引用
 
->虚引用也称为幻影引用：一个对象有虚引用的存在不会对对象的生存时间都构成影响，
-也无法通过虚引用来获取对一个对象的真实引用。唯一的用处：能在对象被GC时收到系统通知，
-JAVA中用PhantomReference来实现虚引用。
+>虚引用也称为幻影引用,就是形同虚设：一个对象有虚引用的存在不会对对象的生存时间都构成影响，
+也无法通过虚引用来获取对一个对象的真实引用。如果一个对象仅持有虚引用，那么它就和没有任何引用一样，在任何时候都可能被垃圾回收。
 
+唯一的用处：能在对象被GC时收到系统通知，JAVA中用PhantomReference来实现虚引用。(虚引用主要用来跟踪对象被垃圾回收的活动。)
