--- a/Database/MySQL/01_数据库的管理和使用.md
+++ b/Database/MySQL/01_数据库的管理和使用.md
@@ -27,6 +27,9 @@ SELECT 1;
 -- 创建数据库
 CREATE DATABASE IF NOT EXISTS test CHARACTER SET utf8mb4;
 
+-- 查看数据库
+SHOW DATABASES;
+
 -- 选择数据库
 USE test;
 
@@ -39,4 +42,7 @@ drop database if exists <db_name>;
 
 # 列出当前数据库的所有表：
 SHOW TABLES;
+
+-- 修改数据库的字符集以及校对规则
+ALTER DATABASE <DBNAME> CHARACTER SET utf8 COLLATE utf8_general_ci;
 ```
