--- a/Database/SQL/01_表中数据的增删改.md
+++ b/Database/SQL/01_表中数据的增删改.md
@@ -66,3 +66,22 @@ DELETE FROM students WHERE id IN (5, 6, 7);
 DELETE FROM students;
 ```
 
+## REPLACE & ON DUPLICATE KEY UPDATE & IGNORE
+
+```sql
+-- 如果希望插入（INSERT一条新记录,例如id=5），但如果记录已经存在(意思是对应的id已经存在)，
+- 直接使用INSERT插入会提示Duplicate entry for key 'PRIMARY',意思是主键重复,所以就不得不先查询记录是否存在，
+- 如果存在就先删除，再插入，如果不存在，就直接插入.(注意一定要包含主键id，否则的话，不会有错误)
+insert into student (id, class_id, name, gender, score) values (5, 2, 'bai', 'F', 81);
+
+-- 可以使用REPLACE语句，这样就不必先查询记录是否存在，再决定直接插入，
+-- 还是先删除再插入，不会提示上面的错误:
+replace into student (id, class_id, name, gender, score) values (5, 2, 'bai', 'F', 81);
+
+-- 如果我们希望插入一条新记录（INSERT），但如果记录已经存在(id已经存在)，就更新该记录，
+-- 此时，可以使用INSERT INTO ... ON DUPLICATE KEY UPDATE ...语句(意思是在DUPLICATE KEY的情况下做UPDATE操作)：
+insert into student (id, class_id, name, gender, score) values (5, 2, 'bai_on', 'F', 88) on duplicate key update name = 'bai_on', gender = 'M', score = 99;
+
+-- 如果我们希望插入一条新记录（INSERT），但如果记录已经存在，就啥事也不干直接忽略，此时，可以使用INSERT IGNORE INTO ...语句（若id=5的记录不存在，INSERT语句将插入新记录，否则，不执行任何操作）：
+insert ignore into student (id, class_id, name, gender, score) values(5, 2, 'aaaa', 'F', 62);
+```
