--- a/JAVA/core/src/main/resources/JVM/4.3_jmap与jhat.md
+++ b/JAVA/core/src/main/resources/JVM/4.3_jmap与jhat.md
@@ -27,6 +27,7 @@ jmap -heap pid
 # 2、查看类名，对象数量，对象占用大小
 # 可以观察heap中所有对象的情况（heap中所有生存的对象的情况）。包括对象数量和所占空间大小。 
 jmap -histo[:live] pid | more
+jmap -histo:live pid | head -7
 # instances列：表示当前类有多少个实例。
 # bytes列：说明当前类的实例总共占用了多少个字节
 # class name列：表示的就是当前类的名称，
